<resources>
    <string name="app_name">SportQuiz</string>
    <string name="app_title">Sport Quiz</string>
    <string name="football_title">Football\nQuiz</string>
    <string name="ski_title">Ski Quiz</string>
    <string name="football_result">Result</string>
    <string name="football_q1">1. Which national team won the World Cup in 2014?</string>
    <string name="football_q1_a1">Brazil</string>
    <string name="football_q1_a2">Germany</string>
    <string name="football_q1_a3">Japan</string>
    <string name="football_q1_a4">Spain</string>
    <string name="football_q2">2. Which teams played the Uefa Cahmpions League final in 2017?</string>
    <string name="football_q2_a1">Real Madrid</string>
    <string name="football_q2_a2">Barcelona</string>
    <string name="football_q2_a3">Juventus</string>
    <string name="football_q2_a4">Chelsea</string>
    <string name="football_q3">3. For what amount of money was Neymar transferred from Barcelona to PSG?</string>
    <string name="football_q3_a1">€202 milions</string>
    <string name="football_q3_a2">€222 milions</string>
    <string name="football_q3_a3">€300 milions</string>
    <string name="football_q3_a4">€210 milions</string>
    <string name="football_q4">"4. Which of the follwing player won the Ballon D'Or?"</string>
    <string name="football_q4_a1">Christiano Ronaldo</string>
    <string name="football_q4_a2">Eden Hazard</string>
    <string name="football_q4_a3">Lionel Messi</string>
    <string name="football_q4_a4">Fabio Cannavaro</string>
    <string name="football_q5">5. Which national team won the Euro 2016?</string>
    <string name="football_q5_a1">England</string>
    <string name="football_q5_a2">Germany</string>
    <string name="football_q5_a3">Spain</string>
    <string name="football_q5_a4">Portugal</string>
    <string name="ski_q1">1. Which Olympic event combines downhill racing and giant slalom?</string>
    <string name="ski_q1_a1">Freestyle moguls</string>
    <string name="ski_q1_a2">Super G</string>
    <string name="ski_q1_a3">Hot-dogging</string>
    <string name="ski_q2">2. Alpine skiing originated in</string>
    <string name="ski_q2_a1">Canada</string>
    <string name="ski_q2_a2">Europe</string>
    <string name="ski_q2_a3">Nepal</string>
    <string name="ski_q3">3. In the 1920s, the only form of skiing in the Olympics was</string>
    <string name="ski_q3_a1">Alpine</string>
    <string name="ski_q3_a2">Freestyle</string>
    <string name="ski_q3_a3">Nordic</string>
    <string name="ski_q4">"4. The only skiing event that includes target shooting is the</string>
    <string name="ski_q4_a1">Moguls</string>
    <string name="ski_q4_a2">Biathlon</string>
    <string name="ski_q4_a3">Slalom</string>
    <string name="ski_q5">5. To increase distance, ski jumpers form their skis into</string>
    <string name="ski_q5_a1">T-shape</string>
    <string name="ski_q5_a2">M-shape</string>
    <string name="ski_q5_a3">V-shape</string>
    <string name="submit_button">SUBMIT</string>
    <string name="home_button">Home</string>
    <string name="reset_button">Reset</string>


    <string name="message_out_of_time">Sorry, you were out of time!</string>
    <string name="message_one_minute_left">You have one minute left. Please try to finnish the quiz!</string>
</resources>
