<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sportquiz.Ski">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/ski_background" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/reset_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ski Quiz"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ski_timmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/end_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ski_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ski_q1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/ski_q1_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q1_a1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q1_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q1_a2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q1_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q1_a3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/ski_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ski_q2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/ski_q2_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q2_a1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q2_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q2_a2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q2_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q2_a3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/ski_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ski_q3" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/ski_q3_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q3_a1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q3_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q3_a2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q3_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q3_a3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/ski_q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ski_q4" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/ski_q4_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q4_a1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q4_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q4_a2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q4_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/ski_q4_a3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/ski_q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ski_q5" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <RadioButton
                        android:id="@+id/ski_q5_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"

                        android:text="@string/ski_q5_a1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q5_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"

                        android:text="@string/ski_q5_a2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ski_q5_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"

                        android:text="@string/ski_q5_a3"
                        android:textSize="16sp" />

                </RadioGroup>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="submit"
                    android:text="@string/submit_button" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
