<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sportquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAllCaps="true"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/football_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:src="@drawable/football" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/football_title"
            android:textSize="32dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ski_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:src="@drawable/ski" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ski_title"
            android:textSize="32dp" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>




